# commstools

./: .coverage  .gitignore  CARRIER_RECOVERY_CODE_REVIEW.md  CLAUDE.md  DSP_DEBUG_PLAN.md  DSP_OVERVIEW.md  JAX_CPR_WARMSTART_PLAN.md  MAINTENANCE.md  PLAN-equalizer-fixes.md  PLAN_equalizer_fixes_block_adaptive.md  PLAN_jax_audit_benchmark.md  README.md  README_PLAN.md  RESTRUCTURE_PLAN.md  architecture_review.md  coverage.json  demo_intradyne_pipeline.py  equalizer_pll_consistency_plan.md  fix_sync.py  fix_sync2.py  fix_test.py  gpu_acceleration_analysis.md  gpu_acceleration_implementation_plan.md  gpu_acceleration_review.md  implementation_plan.md  laser_phase_characterization.md  mypy_output.txt  mypy_output_final.txt  pyproject.toml  recommended_changes.md  run_test.py  run_test2.py  run_test3.py  run_test4.py  run_test_offset.py  run_test_offset_2.py  run_test_offset_3.py  run_test_offset_4.py  run_test_offset_5.py  run_test_slicer.py  (+14 more)
.agent/rules/: uv.md
.github/prompts/: plan-backendRefactoring.prompt.md
.github/workflows/: ci.yml
_benchmarks/: bench_device_roundtrip.py  bench_equalizers.py
benchmarks/: bench_block_blind.py  bench_block_lms.py  bench_bps.py  bench_equalizers.py  bench_sync_misc.py  benchutils.py  conftest.py  workloads.py
benchmarks/baselines/Linux-CPython-3.12-64bit/: 0001_main.json  0002_pre_bps_kernel.json  0003_post_bps_kernel.json  0004_post_bps_kernel_blms.json  0005_post_blms_unwrap_carry.json  0006_post_cs_kernel.json  0007_blms_block_sizes.json  0008_post_cuda_graph.json  0009_post_cuda_graph_dd.json  0010_post_jax_bps_incremental.json  0011_post_block_update_lms.json
commstools/: __init__.py  analysis.py  backend.py  baseband.py  channel.py  core.py  equalization.py  equalizers.py  filtering.py  frequency.py  helpers.py  impairments.py  io.py  logger.py  mapping.py  metrics.py  multirate.py  plotting.py  recovery.py  sequences.py  signal.py  spectral.py  sync.py  system_config.py  timing.py  utils.py  waveforms.py
commstools/_cuda/: __init__.py  compiler.py
commstools/_cuda/src/: bps_min_d2.cu  cs_block.cu  selftest.cu
commstools/analysis/: __init__.py  _common.py  allan.py  characterize.py  drift.py  linewidth.py  trajectory.py
commstools/channel/: __init__.py
commstools/coding/: __init__.py  base.py  bch.py  convolutional.py  crc.py  galois.py  hamming.py  interleaving.py  ldpc.py  polar.py  ratematch.py  reed_solomon.py  turbo.py
commstools/config/: dsp.py  rx.py  sim.py  system.py  tx.py
commstools/core/: __init__.py  backend.py  config.py  frame.py  generation.py  processor.py  signal.py
commstools/dsp/: __init__.py  filtering.py  filters.py  functions.py  mapping.py  multirate.py  sequences.py  utils.py  waveforms.py
commstools/equalization/: __init__.py  _block.py  _common.py  _kernels_jax.py  _kernels_numba.py  blind.py  linear.py  polarization.py  result.py  sequential.py
commstools/impairments/: __init__.py  frontend.py  noise.py  source.py
commstools/impairments/channel/: __init__.py  linear.py  nonlinear.py
commstools/mapping/: __init__.py  bits.py  constellation.py  gray.py  llr.py  shaping.py
commstools/plotting/: __init__.py  analysis.py  constellation.py  equalizer.py  eye.py  spectral.py  sync.py  theme.py  waveform.py
commstools/receive/: __init__.py  configs.py  dsp.py  dsp_blocks.py  dsp_functions.py  pipeline_runner.py  runner.py
commstools/receive/config/: dsp.py  pipeline.py
commstools/recovery/: __init__.py  bps.py  corrections.py  pilots.py  pll.py  tikhonov.py  viterbi_viterbi.py
commstools/rx/: dsp_chain.py  registry.py
commstools/rx/algorithms/: resampling.py
commstools/rx/config/: block.py  chain.py
commstools/transmit/config/: waveform.py
commstools/utils/: generate_config_template.py  io.py
debug/: 00-tmp.ipynb  02-debug-intradyne-part.ipynb  _01-debug-intradyne.ipynb  _02-debug-intradyne-part.ipynb
docs/design/: DD-00-benchmark-harness.md  DD-01-bps-fused-kernel.md  DD-02-block-lms-gpu-cpr-state.md  DD-03-cuda-sequential-equalizers.md  DD-04-block-update-equalizers.md  DD-05-host-sync-hygiene.md
examples/: 00-basics.ipynb  01-pam-waveforms.ipynb  01-signal-generation.py  02-pulse-shaping.py  02-qam-waveforms.ipynb  03-building-blocks.py  03-frames.ipynb  04-equalizers.ipynb  04-equalizers.py  04-matched-filtering.py  demo_config.py  demo_usage.py  generate_plots.py  jax_vs_numpy.py  jit_demo.py  laser_phase_characterization.py  multi_stage_equalization.py  psqam_intradyne_pipeline.py  rx_workflow.py  single_carrier_transmission.py  test.npz  tmp.py
examples/configs/: example_dsp_chain.yaml  example_receive_pipeline.yaml  example_waveform.yaml
tests/: conftest.py  repro_signal.py  test_analysis.py  test_backend.py  test_baseband.py  test_block_blind_equalizers.py  test_block_lms.py  test_block_update_equalizers.py  test_bps_kernel.py  test_carrier_sync.py  test_channel.py  test_config.py  test_core.py  test_core_architecture.py  test_cpr_equalizer.py  test_cuda_infra.py  test_dsp.py  test_dsp_filtering.py  test_dsp_mapping.py  test_dsp_multirate.py  test_dsp_sequences.py  test_dsp_utils.py  test_equalization.py  test_equalizers.py  test_filtering.py  test_filters_comprehensive.py  test_frequency.py  test_global_backend.py  test_helpers.py  test_impairments.py  test_io.py  test_logger.py  test_mapping.py  test_metrics.py  test_multirate.py  test_plotting.py  test_psqam.py  test_pulse_shaping.py  test_recovery.py  test_sc_frame.py  (+12 more)
tests/analysis/: test_allan.py  test_characterize.py  test_drift.py  test_linewidth.py  test_trajectory.py
tests/core/: test_signal_mimo.py
tests/equalization/: test_cpr.py  test_cs_kernel.py  test_linear.py  test_mimo.py  test_polarization.py  test_sequential.py  test_sequential_jax.py  test_winit.py
tests/impairments/: test_frontend.py  test_noise.py  test_source.py
tests/mapping/: test_bits.py  test_constellation.py  test_gray.py  test_llr.py
tests/recovery/: test_bps.py  test_corrections.py  test_joint.py  test_pilots.py  test_pll.py  test_tikhonov.py  test_viterbi_viterbi.py
(+1 files in other folders)
