[project]
name = "commstools"
version = "4.0.0"
description = "A Python library for high-performance digital communications research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11",
    "numpy>=2.4",
    "pandas>=3.0",
    "pyyaml>=6.0.2",
    "scipy>=1.17",
    "pydantic>=2.13",
    "numba>=0.65",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda13]>=0.10",
    "cupy-cuda13x>=14.1",
    "nvidia-curand>=10.4.1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commstools"]
# CUDA kernel sources are loaded at runtime via importlib.resources and
# must ship with the package.
artifacts = ["commstools/_cuda/src/*.cu"]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "mypy>=2.1.0",
    "nbstripout>=0.9.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--device=all"
# bench_* patterns exist for the explicit-only benchmarks/ suite;
# the default run still collects tests/ only via testpaths.
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
filterwarnings = [
    "ignore::FutureWarning:cupyx",
]
markers = [
    "gpu: marks tests as requiring a GPU (skipped automatically when CuPy is unavailable)",
]

[tool.bumpversion]
current_version = "4.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = ["uv sync --all-extras", "git add uv.lock"]
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "commstools/__init__.py"

[tool.mypy]
ignore_missing_imports = true

